--- a/conf.py.template
+++ b/conf.py.template
@@ -1,4 +1,4 @@
-train_images_path = "train-images.idx3-ubyte"
-train_labels_path = "train-labels.idx1-ubyte"
-test_images_path = "t10k-images.idx3-ubyte"
-test_labels_path = "t10k-labels.idx1-ubyte"
+train_images_path = "train-images-idx3-ubyte"
+train_labels_path = "train-labels-idx1-ubyte"
+test_images_path = "t10k-images-idx3-ubyte"
+test_labels_path = "t10k-labels-idx1-ubyte"
